--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "jsx": "react-native",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
+    "rootDir": "./src",
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
